
Since we cannot compute Percentage of Nos, we compare:

SUM of Nos from GESIS with Employment rate, by sex from Estatwrap from Germany.

This would show: Integration of Germany. 

In ISEM paper, we had with respect to size of datasets:

1) 2 DS with 20,268 triples
3a) 4 DS with 24,636 triples
3b) 8 DS with 35,482 triples

We now would like to extend this.

==2014-05-08==
* Convert-Cube / Merge-Cubes implemented.
* Problem: For Drill-Across, we have added several measures. As name, we use the measure property, the dataset URI and the aggregation function string. However, the select query contains a triple pattern for the Measures dimension and triple patterns for those additional measures that we have created. 
* Solution: getString() had to be used!
* Problem: The physical query plan is executed, immediately? Can we not return it first? 
* Now all iterators only fire if needed (init() also implemented)
* Remaining: Weakness with current execution. If below convert cube is a query tree, if I call getXXX(), I might get bogus. If I did it right, I would make sure that with getXXX() either iterator is executed or at least made sure that correct metadata is returned.

==2014-05-07==
* Problem: So far we only supported one Drill-Across per query. 
* Solution: Now, the Drill-Across visitor goes through the entire tree and picks all non-Drill-Across subtrees converted to Iterator with OLAP-to-SPARQL.

* Problem: Results are empty.
* Solution: For nested-loop join, we need to be able to init the Drill-Across iterator, which first was not implemented.

==2014-05-04==
* Removed all compliation problems due to refactoring.
* Correctly computed comparison of Employment Fear vs. Real GDP Growth Rate.
* Growth rate:
** http://epp.eurostat.ec.europa.eu/tgm/table.do?tab=table&init=1&plugin=1&language=en&pcode=tec00115 (not tsieb020, anymore, renamed? See number of triples)
** http://estatwrap.ontologycentral.com/data/tec00115