@@ -6,4 +6,4 @@ java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.level=INFO
 java.util.logging.FileHandler.pattern=log/olap4ld_%u.log
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
-java.util.logging.FileHandler.append=true
+java.util.logging.FileHandler.append=false
